# openScale-flutter

./: AGENTS.md
android_app/: AGENTS.md
arduino_mcu/: AGENTS.md
aurora_app/: AGENTS.md  README.md  analysis_options.yaml  pubspec.yaml
aurora_app/android/app/: build.gradle.kts
aurora_app/lib/: main.dart
aurora_app/lib/core/database/: app_database.dart
aurora_app/lib/core/models/: enums.dart  measurement.dart  measurement_type.dart  measurement_value.dart  user.dart  user_goal.dart
aurora_app/lib/core/repository/: measurement_repository_impl.dart  user_repository_impl.dart
aurora_app/lib/core/utils/: calculation_utils.dart  logging.dart
aurora_app/lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_ru.dart  app_ru.arb
aurora_app/lib/ui/navigation/: app_router.dart
aurora_app/lib/ui/shared/: bloc_providers.dart
aurora_app/lib/ui/theme/: app_colors.dart  app_theme.dart
aurora_app/lib/ui/widgets/: date_range_selector.dart  measurement_card.dart  measurement_type_selector.dart
aurora_app/linux/: CMakeLists.txt  aurora_app.desktop  my_application.cc
aurora_app/linux/flutter/ephemeral/.plugin_symlinks/: path_provider_linux  shared_preferences_linux
aurora_app/test/core/bloc/: measurement_bloc_test.dart  settings_bloc_test.dart  user_bloc_test.dart
aurora_app/test/core/models/: enums_test.dart  measurement_test.dart  measurement_type_test.dart  measurement_value_test.dart  user_goal_test.dart  user_test.dart
aurora_app/windows/: CMakeLists.txt
aurora_app/windows/runner/: Runner.rc  main.cpp
(+70 files in other folders)
